#39: adds version merge rest services
